...

                <TextView
                    android:id="@+id/manga_detail_title"
                    style="@style/TextNormal.MangaDetailTitle"
                    android:layout_width="wrap_content"
...

                            <ImageView
                                android:id="@+id/manga_detail_manga_image"
                                style="@style/AppBackground.Item"
                                android:layout_width="match_parent"
...

                        <TextView
                            android:id="@+id/manga_detail_folder"
                            style="@style/TextNormal.MangaDetail"
                            android:layout_width="wrap_content"
...

                        <TextView
                            android:id="@+id/manga_detail_book_mark"
                            style="@style/TextTitle.MangaDetail"
                            android:layout_width="wrap_content"
...

                <HorizontalScrollView
                    android:id="@+id/manga_detail_scroll_view"
                    style="@style/AppBackground.Accent"
                    android:layout_width="match_parent"
...

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/manga_detail_button_favorite"
                            style="@style/Button.Detail"
                            android:layout_width="0dp"
...

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/manga_detail_button_mark_read"
                            style="@style/Button.Detail"
                            android:layout_width="0dp"
...

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/manga_detail_button_delete"
                            style="@style/Button.Detail"
                            android:layout_width="0dp"
...

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/manga_detail_button_vocabulary"
                            style="@style/Button.Detail"
                            android:layout_width="0dp"
...

                    <TextView
                        android:id="@+id/manga_detail_local_information_title"
                        style="@style/TextTitle.MangaDetail"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/manga_detail_local_information_series"
                        style="@style/TextNormal"
                        android:layout_width="wrap_content"
...

                    <TextView
                        android:id="@+id/manga_detail_local_information_authors"
                        style="@style/TextNormal"
                        android:layout_width="wrap_content"
...
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/manga_detail_local_information_volume"
                            style="@style/TextNormal"
                            android:layout_width="0dp"
...

                        <TextView
                            android:id="@+id/manga_detail_local_information_release"
                            style="@style/TextNormal"
                            android:layout_width="0dp"
...
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/manga_detail_local_information_publisher"
                            style="@style/TextNormal"
                            android:layout_width="0dp"
...

                        <org.lucasr.twowayview.TwoWayView
                            android:id="@+id/manga_detail_local_information_comic_info_tags"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/manga_detail_local_information_tags_height"
...
