...

    <string name="action_confirm">Confirm</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_return">Return</string>
    <string name="action_positive">Yes</string>
    <string name="action_negative">No</string>
    <string name="action_delete">Delete</string>
    <string name="action_copy">Copied: %s</string>
    <string name="action_app_not_installed">Required App is not installed</string>
    <string name="action_scroll_up">Up</string>
    <string name="action_scroll_down">Down</string>
    <string name="action_disconnect">Disconnect</string>
...
    <string name="switch_next_book_last_comic">This is the last file.</string>

    <!-- LIBRARY - Manga / Comic -->
    <string name="manga_library_last_access">Last access</string>
    <string name="manga_library_menu_favorite_add">Add favorite</string>
    <string name="manga_library_menu_favorite_remove">Remove favorite</string>
    <string name="manga_library_menu_delete">Delete</string>
    <string name="manga_library_menu_delete_description">Do you really want to delete the file?</string>
    <string name="manga_library_menu_clear">Clear history</string>
    <string name="manga_library_default">Default</string>
    <string name="manga_library_menu_copy">Copy</string>

    <string name="library_separator_unread">Unread</string>
...
    <string name="page_link_manga_empty_description">Manga not selected</string>
    <string name="page_link_file">File in another language</string>
    <string name="page_link_file_language">File language</string>
    <string name="page_link_reload_file_link">Refresh file link</string>
    <string name="page_link_save">Save</string>
    <string name="page_link_delete_file_link">Delete file link</string>
    <string name="page_link_delete_description">You want to delete linked pages?</string>
    <string name="page_link_load_file_wrong">Unsupported file</string>
    <string name="page_link_load_error">Error opening file</string>
    <string name="page_link_saved">Saved</string>
    <string name="page_link_page_not_linked">Pages not linked</string>
    <string name="page_link_refreshed">Refreshed</string>
    <string name="page_link_reorder_auto">Auto reorder pages</string>
...
