...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:clipChildren="false">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/pages_link_pages_linked_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:scrollbars="vertical"
            android:layout_marginTop="@dimen/page_link_list_link_margin_top"
            android:paddingTop="@dimen/page_link_list_link_padding_top"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/pages_link_pages_not_linked_recycler"
                android:tag="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/page_link_list_not_link_height"
                android:layout_centerHorizontal="true"
                android:scrollbars="horizontal"
                android:orientation="horizontal"
...
                        android:layout_height="match_parent" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/pages_link_name_manga"
                style="@style/TextTitle.Line.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="@dimen/page_link_manga_name_size"
...
            android:orientation="vertical"
            android:layout_marginStart="@dimen/margin_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/pages_link_buttons_content">

            <br.com.fenix.bilingualreader.view.components.MaterialButtonExpanded
                android:id="@+id/pages_link_auto_process_button"
                style="@style/Button.PageLinkFunction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/page_link_reorder_auto"
                android:text="@string/page_link_reorder_auto"
                app:icon="@drawable/ico_animated_file_link_auto_process"/>
...
                android:layout_height="wrap_content"
                android:contentDescription="@string/page_link_reorder_dual_page"
                android:text="@string/page_link_reorder_dual_page"
                app:icon="@drawable/ico_animated_file_link_dual_page"/>

            <br.com.fenix.bilingualreader.view.components.MaterialButtonExpanded
                android:id="@+id/pages_link_single_page_button"
                style="@style/Button.PageLinkFunction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/page_link_reorder_single_page"
                android:text="@string/page_link_reorder_single_page"
                app:icon="@drawable/ico_animated_file_link_single_page"/>

            <br.com.fenix.bilingualreader.view.components.MaterialButtonExpanded
                android:id="@+id/pages_link_reorder_button"
                style="@style/Button.PageLinkFunction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/page_link_reorder_sorted_page"
                android:text="@string/page_link_reorder_sorted_page"
                app:icon="@drawable/ico_animated_file_link_reorder" />

            <br.com.fenix.bilingualreader.view.components.MaterialButtonExpanded
                android:id="@+id/file_link_delete_button"
                style="@style/Button.PageLinkFunction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/page_link_delete_file_link"
                android:text="@string/page_link_delete_file_link"
                app:icon="@drawable/ico_animated_file_link_deleted"/>
...
